--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <img src="res/022_war_project_bottom.svg" width="820"></img>
   </section>
   <!-- Testfrage -->
-  <section class="step real-step quiz-slide hide" data-x="0" data-y="1280" data-z="3000" data-scale="4" data-rotate-y="90">
+  <section class="step real-step quiz-slide hide" data-x="1860" data-y="1380" data-z="3000" data-scale="0.5">
     <div class="quiz-question">Wie heißt das defacto Test-Framework der Java-Welt?</div>
     <div class="quiz-optionlist">
       <table border="0">
@@ -153,7 +153,7 @@
         <tr><td><img src="res/904_Solution_D.svg" width="80"/></td><td>JAsset</td></tr>
       </table>
     </div>
-    <div style="float: left;"><canvas id="vote-graph-1" class="vote-result" width="240" height="480"></canvas></div>
+    <div style="float: left;"><canvas id="vote-graph-2" class="vote-result" width="240" height="480"></canvas></div>
   </section>
   <section class="step real-step multi" data-x="1860" data-y="1280" data-z="400" data-scale="1.3">
     <img src="res/022_war_project_bottom.svg" width="820"></img>
@@ -189,7 +189,7 @@
   <section class="step" data-x="-1000" data-y="4850" data-z="-3000" data-scale="8">
     <img class="blass" src="res/004_HelloRest_Icon.svg" width="320"></img>
   </section>
-  <section class="step real-step multi" data-x="-2200" data-y="4200" data-z="400" data-scale="3.6">
+  <section class="step real-step multi" data-x="-2200" data-y="4200" data-z="401" data-scale="3.6">
     <h2>Erste Schritte</h2>
     <ul>
       <li>Projektrahmen mit <a href="https://start.spring.io/" target="blank">Spring Initializer</a> </li>
@@ -278,7 +278,7 @@
         <tr><td><img src="res/904_Solution_D.svg" width="80"/></td><td><span class="code">*/10 20-41 * 29 2 *</span></td></tr>
       </table>
     </div>
-    <div style="float: left;"><canvas id="vote-graph-1" class="vote-result" width="240" height="480"></canvas></div>
+    <div style="float: left;"><canvas id="vote-graph-3" class="vote-result" width="240" height="480"></canvas></div>
   </section>
   <!-- Web-Schnittstelle -->
   <section class="step real-step multi" data-x="-2200" data-y="4200" data-z="400" data-scale="3.6">
@@ -400,10 +400,10 @@
       public ServerMessage getVote(CandidateVote vote){ ... }
     </div>
     <p class="klein">Erfordert Deklaration der Schnittstellen.</p>
-    <p>siehe <a href="" target="blank">WebSocketConfig.java</a></p>
+    <p>siehe <a href="https://github.com/PattyDePuh/webpub_spring/blob/master/samples/votequiz/src/main/java/quiz/WebSocketConfig.java" target="blank">WebSocketConfig.java</a></p>
   </section>
 
-  <section class="step real-step multi" data-x="2200" data-y="4200" data-z="400" data-scale="3.8">
+  <section class="step real-step multi" data-x="2200" data-y="4200" data-z="400" data-scale="3.8" data-rotate-x="-1">
     <h4>Websocket Controller</h4>
     <p class="klein">Client-seitig realisierbar mit <a href="https://github.com/sockjs" target="blank">SockJS</a> &amp; <a href="http://stomp.github.io/" target="blank">STOMP</a>:</p>
     <div class="code">
